--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <nav id="navbar" class="navbar navbar-expand-sm bg-light fixed-top">
   <ul id="nav-bar" class="navbar-nav ml-auto">
     <li class="nav-item"><a href="#welcome-section" class="nav-link">About</a></li>
